; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_common.c_ice_aq_set_link_restart_an.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_common.c_ice_aq_set_link_restart_an.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_port_info = type { i32, i32 }
%struct.ice_sq_cd = type { i32 }
%struct.ice_aqc_restart_an = type { i32, i32 }
%struct.ice_aq_desc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ice_aqc_restart_an }

@ice_aqc_opc_restart_an = common dso_local global i32 0, align 4
@ICE_AQC_RESTART_AN_LINK_RESTART = common dso_local global i32 0, align 4
@ICE_AQC_RESTART_AN_LINK_ENABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ice_aq_set_link_restart_an(%struct.ice_port_info* %0, i32 %1, %struct.ice_sq_cd* %2) #0 {
  %4 = alloca %struct.ice_port_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ice_sq_cd*, align 8
  %7 = alloca %struct.ice_aqc_restart_an*, align 8
  %8 = alloca %struct.ice_aq_desc, align 4
  store %struct.ice_port_info* %0, %struct.ice_port_info** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.ice_sq_cd* %2, %struct.ice_sq_cd** %6, align 8
  %9 = getelementptr inbounds %struct.ice_aq_desc, %struct.ice_aq_desc* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.ice_aqc_restart_an* %10, %struct.ice_aqc_restart_an** %7, align 8
  %11 = load i32, i32* @ice_aqc_opc_restart_an, align 4
  %12 = call i32 @ice_fill_dflt_direct_cmd_desc(%struct.ice_aq_desc* %8, i32 %11)
  %13 = load i32, i32* @ICE_AQC_RESTART_AN_LINK_RESTART, align 4
  %14 = load %struct.ice_aqc_restart_an*, %struct.ice_aqc_restart_an** %7, align 8
  %15 = getelementptr inbounds %struct.ice_aqc_restart_an, %struct.ice_aqc_restart_an* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.ice_port_info*, %struct.ice_port_info** %4, align 8
  %17 = getelementptr inbounds %struct.ice_port_info, %struct.ice_port_info* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.ice_aqc_restart_an*, %struct.ice_aqc_restart_an** %7, align 8
  %20 = getelementptr inbounds %struct.ice_aqc_restart_an, %struct.ice_aqc_restart_an* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %5, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %3
  %24 = load i32, i32* @ICE_AQC_RESTART_AN_LINK_ENABLE, align 4
  %25 = load %struct.ice_aqc_restart_an*, %struct.ice_aqc_restart_an** %7, align 8
  %26 = getelementptr inbounds %struct.ice_aqc_restart_an, %struct.ice_aqc_restart_an* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = or i32 %27, %24
  store i32 %28, i32* %26, align 4
  br label %36

29:                                               ; preds = %3
  %30 = load i32, i32* @ICE_AQC_RESTART_AN_LINK_ENABLE, align 4
  %31 = xor i32 %30, -1
  %32 = load %struct.ice_aqc_restart_an*, %struct.ice_aqc_restart_an** %7, align 8
  %33 = getelementptr inbounds %struct.ice_aqc_restart_an, %struct.ice_aqc_restart_an* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = and i32 %34, %31
  store i32 %35, i32* %33, align 4
  br label %36

36:                                               ; preds = %29, %23
  %37 = load %struct.ice_port_info*, %struct.ice_port_info** %4, align 8
  %38 = getelementptr inbounds %struct.ice_port_info, %struct.ice_port_info* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.ice_sq_cd*, %struct.ice_sq_cd** %6, align 8
  %41 = call i32 @ice_aq_send_cmd(i32 %39, %struct.ice_aq_desc* %8, i32* null, i32 0, %struct.ice_sq_cd* %40)
  ret i32 %41
}

declare dso_local i32 @ice_fill_dflt_direct_cmd_desc(%struct.ice_aq_desc*, i32) #1

declare dso_local i32 @ice_aq_send_cmd(i32, %struct.ice_aq_desc*, i32*, i32, %struct.ice_sq_cd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
